[project]
name = "ai-chef"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-oss-v2>=1.3.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.16",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.24",
    "python-dotenv>=1.2.2",
]
